overflow completely fixed by changing the x translate

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -162,8 +162,7 @@ body{
     &--wrap{
             position: absolute;
             top: 20%;
-            left: -10%;
-            transform: scale(0) translateX(-10vw);
+            transform: scale(0) translateX(0vw);
             will-change: transform;
             
             animation-name: fly-right-one;
@@ -171,22 +170,22 @@ body{
             animation-iteration-count: infinite;
             
             &--one {
-                animation-duration: 15s;
+                animation-duration: 7s;
                 animation-delay: 0;
             }
             
             &--two {
-                animation-duration: 16s;
+                animation-duration: 8s;
                 animation-delay: 1s;
             }
             
             &--three {
-                animation-duration: 14.6s;
+                animation-duration: 6s;
                 animation-delay: 9.5s;
             }
             
             &--four {
-                animation-duration: 16s;
+                animation-duration: 8s;
                 animation-delay: 10.25s;
             }
         
@@ -206,7 +205,7 @@ body{
 @keyframes fly-right-one {
 	
 	0% {
-		transform: scale(0.3) translateX(-10vw);
+		transform: scale(0.3) translateX(0vw);
 	}
 	
 	10% {
@@ -214,27 +213,27 @@ body{
 	}
 	
 	20% {
-		transform: translateY(0vh) translateX(30vw) scale(0.5);
+		transform: translateY(0vh) translateX(20vw) scale(0.5);
 	}
 	
 	30% {
-		transform: translateY(4vh) translateX(50vw) scale(0.6);
+		transform: translateY(4vh) translateX(30vw) scale(0.6);
 	}
 	
 	40% {
-		transform: translateY(2vh) translateX(70vw) scale(0.6);
+		transform: translateY(2vh) translateX(40vw) scale(0.6);
 	}
 	
 	50% {
-		transform: translateY(0vh) translateX(90vw) scale(0.6);
+		transform: translateY(0vh) translateX(50vw) scale(0.6);
 	}
 	
 	60% {
-		transform: translateY(0vh) translateX(110vw) scale(0.6);
+		transform: translateY(0vh) translateX(60vw) scale(0.6);
 	}
 	
 	100% {
-		transform: translateY(0vh) translateX(110vw) scale(0.6);
+		transform: translateY(0vh) translateX(100vw) scale(0.6);
 	}
 	
 }
